Add RemoveApplication endpoint
