# worker/grpcserver/server.go
@@ -3,7 +3,12 @@ package grpcserver
 import (
 	"context"
 
+	apiapplication "github.com/juju/juju/api/client/application"
+	"github.com/juju/juju/cmd/juju/block"
 	simpleapi "github.com/juju/juju/grpc/gen/proto/go/juju/client/simple/v1alpha1"
+	"github.com/juju/juju/rpc/params"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
 )
 
 // This implements the SimpleService gRPC service.
@@ -61,4 +66,40 @@ func (s *server) Deploy(ctx context.Context, req *simpleapi.DeployRequest) (*sim
 		return nil, err
 	}
 	return &simpleapi.DeployResponse{}, nil
+}
+
+func (s *server) RemoveApplication(ctx context.Context, req *simpleapi.RemoveApplicationRequest) (*simpleapi.RemoveApplicationResponse, error) {
+	conn, err := getConnection(ctx)
+	if err != nil {
+		return nil, err
+	}
+	client := apiapplication.NewClient(conn)
+	results, err := client.DestroyApplications(apiapplication.DestroyApplicationsParams{
+		Applications:   []string{req.ApplicationName},
+		DestroyStorage: req.DestroyStorage,
+		Force:          req.Force,
+	})
+	if err := block.ProcessBlockedError(err, block.BlockRemove); err != nil {
+		return nil, err
+	}
+	if len(results) != 1 {
+		return nil, status.Error(codes.Internal, "Internal error")
+	}
+	result := results[0]
+	if result.Error != nil {
+		return nil, result.Error
+	}
+	return &simpleapi.RemoveApplicationResponse{
+		DestroyedStorageTags: entitySliceToTagSlice(result.Info.DestroyedStorage),
+		DetachedStorageTags:  entitySliceToTagSlice(result.Info.DetachedStorage),
+		DestroyedUniTagss:    entitySliceToTagSlice(result.Info.DestroyedUnits),
+	}, nil
+}
+
+func entitySliceToTagSlice(entities []params.Entity) []string {
+	tags := make([]string, len(entities))
+	for i, e := range entities {
+		tags[i] = e.Tag
+	}
+	return tags
 }
